Added missing token

--- a/dbsettings/templates/dbsettings/app_settings.html
+++ b/dbsettings/templates/dbsettings/app_settings.html
@@ -51,7 +51,7 @@
 			</table>
 		</div>
 	{% endfor %}
-<input type="submit" value="Save" class="default" />
+{% csrf_token %}<input type="submit" value="Save" class="default" />
 </form>
 {% else %}
     <p>{% trans "You don't have permission to edit values." %}</p>
