--- a/dbsettings/templates/dbsettings/site_settings.html
+++ b/dbsettings/templates/dbsettings/site_settings.html
@@ -67,7 +67,7 @@
 			<p>{{ field.label }}</p>
 		{% endfor %}
 	{% endfor %}
-<input type="submit" value="Save" class="default" />
+{% csrf_token %}<input type="submit" value="Save" class="default" />
 </form>
 {% else %}
     <p>{% trans "You don't have permission to edit values." %}</p>
