--- a/dbsettings/templates/dbsettings/site_settings.html
+++ b/dbsettings/templates/dbsettings/site_settings.html
@@ -26,7 +26,7 @@
 {% endif %}
 {% if form.fields %}
 {% regroup form by module_name as modules %}
-<form method="post">
+<form enctype="multipart/form-data" method="post">
 	{% for module in modules %}
 		<div class="module">
 			<table summary="{% filter capfirst %}{% blocktrans with module.grouper as name %}Models available in the {{ name }} application.{% endblocktrans %}{% endfilter %}" width="100%">
