--- a/dbsettings/templates/dbsettings/app_settings.html
+++ b/dbsettings/templates/dbsettings/app_settings.html
@@ -26,22 +26,7 @@
 		<div class="module">
         <table summary="{% filter capfirst %}{% blocktrans with class.grouper as name %}Settings included in the {{ name }} class.{% endblocktrans %}{% endfilter %}" width="100%">
 			<caption>{% filter capfirst %}{% if class.grouper %}{% blocktrans with class.grouper as name %}{{ name }}{% endblocktrans %}{% else %}Application settings{% endif %}{% endfilter %}</caption>
-			{% for field in class.list %}
-				{% if field.errors %}
-				<tr class="error">
-					<td colspan="2">{{ field.errors }}</td>
-				</tr>
-				{% endif %}
-				<tr{% if field.errors %} class="error"{% endif %}>
-					<td>
-						{{ field.label_tag }}
-						{% if field.help_text %}
-							<p class="help">{{ field.help_text|escape }}</p>
-						{% endif %}
-					</td>
-					<td>{{ field }}</td>
-				</tr>
-			{% endfor %}
+			{% include "dbsettings/values.html" %}
 			</table>
 		</div>
 	{% endfor %}
