--- a/dbsettings/templates/dbsettings/app_settings.html
+++ b/dbsettings/templates/dbsettings/app_settings.html
@@ -1,5 +1,6 @@
 {% extends "admin/base_site.html" %}
 {% load i18n adminmedia %}
+{% load url from future %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />{% endblock %}
 
@@ -7,7 +8,7 @@
 {% block bodyclass %}dbsettings{% endblock %}
 {% block breadcrumbs %}{% if not is_popup %}
 <div class="breadcrumbs">
-    <a href="{% url admin:index %}">{% trans "Home" %}</a> &rsaquo;
+    <a href="{% url 'admin:index' %}">{% trans "Home" %}</a> &rsaquo;
     {% trans "Edit Settings" %}
 </div>
 {% endif %}{% endblock %}
