--- a/dbsettings/templates/dbsettings/app_settings.html
+++ b/dbsettings/templates/dbsettings/app_settings.html
@@ -1,8 +1,8 @@
 {% extends "admin/base_site.html" %}
-{% load i18n adminmedia %}
+{% load i18n static %}
 {% load url from future %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% get_static_prefix %}admin/css/forms.css" />{% endblock %}
 
 {% block coltype %}colMS{% endblock %}
 {% block bodyclass %}dbsettings{% endblock %}
